<resources>
    <string name="app_name">IQTEST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">ลับสมองประลองปัญญา!!</string>
    <string name="start_text">ลับสมองประลองปัญญา!!</string>
    <string name="entername_text">Please enter your name</string>
    <string name="start_button">START</string>
    <string name="score_text">SCORE   BOARD</string>
    <string name="name_text">1.  Kavin</string>
    <string name="final_score_text">140</string>
    <string name="clear_score_button">CLEAR SCORE</string>
    <string name="main_menu_button">MAIN MENU</string>
    <string name="question_text">Question   1  of  10</string>
    <string name="name_result_text">Kevin</string>
    <string name="name_result_text2">your IQ score is</string>
    <string name="score_result_text">140</string>
    <string name="main_menu_result_button">MAIN MENU</string>
    <string name="high_score_button">HIGH SCORE</string>
    <string name="name_hint">Your name</string>
    <string name="about_button">ABOUT</string>
    <string name="start_button_text">LET\'S START</string>
    <string name="about_title_text">ABOUT</string>
    <string name="about_text">ลับสมองประลองปัญญาเป็นเกมแนว Quiz \n\nซึ่งเกี่ยวกับการประเมิณ IQ มี 10 คำถามกับ \n\n4 ตัวเลือก</string>
    <string name="about_menu">about</string>
    <string name="share_item">share</string>
    <string name="share_success_text">My name is %1$s. My IQ Score %2$d!! From ลับสมองประลองปัญญา App</string>
    <string name="brain_pics_result" />
    <string name="num_question_format">Question : %s / 10</string>
    <string name="hey_text">Hey!!</string>
    <string name="high_score_text">HIGH SCORE BOARD</string>
    <string name="img_start">imgstart</string>
</resources>
