<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="resultViewModel"
            type="buu.informatics.s59160575.iqtest.screens.result.ResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forest"
        tools:context=".screens.result.ResultFragment">

        <ImageView
            android:id="@+id/brainPics"
            android:layout_width="205dp"
            android:layout_height="218dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/brain_pics_result"
            android:src="@drawable/lightbulb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="end"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/name_result_text"
            android:textColor="#FFEB3B"
            android:textColorHighlight="#F30707"
            android:textColorLink="#00EE0606"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heyText" />

        <TextView
            android:id="@+id/heyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/hey_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brainPics" />

        <TextView
            android:id="@+id/nameResultText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/name_result_text2"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameResultText" />

        <TextView
            android:id="@+id/scoreResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/score_result_text"
            android:textColor="#FFEB3B"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameResultText2" />

        <Button
            android:id="@+id/mainMenuResultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:text="@string/main_menu_result_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreResultText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>