<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forest"
        tools:context=".screens.start.StartFragment">

        <ImageView
            android:id="@+id/brainPics"
            android:layout_width="268dp"
            android:layout_height="188dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/brain"
            android:contentDescription="@string/img_start" />

        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/start_text"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brainPics" />

        <Button
            android:id="@+id/letStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:text="@string/start_button_text"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/highScoreButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startText" />

        <Button
            android:id="@+id/highScoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:text="@string/high_score_button"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/letStartButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
