<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forest"
        tools:context=".screens.name.NameFragment">

        <TextView
            android:id="@+id/enterNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="#03A9F4"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/entername_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="344dp"
            android:layout_height="65dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterNameText" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimary"
            android:paddingStart="140dp"
            android:paddingEnd="140dp"
            android:text="@string/start_button"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
